@@ -1,13 +1,18 @@
 package moe.score.pishockzap.config;
 
+import com.google.common.collect.ImmutableList;
 import lombok.Data;
 import lombok.NonNull;
+import moe.score.pishockzap.PishockZapMod;
 
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.logging.Logger;
 import java.util.stream.Collectors;
 
 @Data
@@ -63,7 +68,7 @@ public class PishockZapConfig {
     private boolean queueDifferent = true;
 
     /// The type of PiShock API to use
-    private @NonNull PiShockApiType apiType = PiShockApiType.WEB_V1;
+    private @NonNull ShockBackendType apiType = ShockBackendType.WEB_V1;
 
     /// Identifier for on-site logs
     private @NonNull String logIdentifier = "PiShock-Zap (Minecraft)";
@@ -72,7 +77,18 @@ public class PishockZapConfig {
     /// PiShock account API key
     private @NonNull String apiKey = "";
     /// PiShock device share codes
-    private @NonNull List<String> shareCodes = List.of("BADC0DE0000");
+    private @NonNull List<String> shareCodes = ImmutableList.of("BADC0DE0000");
+
+    public void setLogIdentifier(String string) {
+        logIdentifier = string.isBlank() ? "PiShock-Zap (Minecraft)" : string.trim();
+    }
+
+    public void setShareCodes(List<String> strings) {
+        shareCodes = ImmutableList.copyOf(strings.stream()
+            .map(String::trim)
+            .filter(s -> !s.isEmpty())
+            .iterator());
+    }
 
     /// PiShock device serial port
     private @NonNull String serialPort = "/dev/ttyACM0";
@@ -82,17 +98,22 @@ public class PishockZapConfig {
     /// Custom Webhook URL
     private @NonNull String customWebhookUrl = "";
 
+    /// OpenShock API token
+    private @NonNull String openShockApiToken = "";
+    /// OpenShock shocker IDs
+    private @NonNull List<String> openShockShockerIds = List.of("badc0def-ffff-ffff-ffff-badc0defffff");
+
     private boolean fieldIsListOfInteger(@NonNull Field field) {
         return field.getName().equals("deviceIds");
     }
 
-    private void setSingleConfigField(@NonNull Field field, @NonNull Object value) {
+    private void setSingleConfigField(@NonNull Field field, @NonNull Method setter, @NonNull Object value) {
         try {
             Class<?> type = field.getType();
             if (type.isAssignableFrom(ShockDistribution.class)) {
                 value = ShockDistribution.valueOf((String) value);
-            } else if (type.isAssignableFrom(PiShockApiType.class)) {
-                value = PiShockApiType.valueOf((String) value);
+            } else if (type.isAssignableFrom(ShockBackendType.class)) {
+                value = ShockBackendType.valueOf((String) value);
             } else if ((type.isAssignableFrom(Integer.class) || type.isAssignableFrom(int.class)) && value instanceof Number) {
                 value = ((Number) value).intValue();
             } else if ((type.isAssignableFrom(Float.class) || type.isAssignableFrom(float.class)) && value instanceof Number) {
@@ -101,8 +122,8 @@ public class PishockZapConfig {
                 // noinspection unchecked -- gets checked pretty damn quickly
                 value = ((List<Number>) value).stream().map(Number::intValue).collect(Collectors.toList());
             }
-            field.set(this, value);
-        } catch (IllegalAccessException e) {
+            setter.invoke(this, value);
+        } catch (IllegalAccessException | InvocationTargetException e) {
             e.printStackTrace();
         } catch (IllegalArgumentException | ClassCastException e) {
             System.err.printf("Config value %s is not of type %s (got %s)%n", field.getName(), field.getType().getName(), value.getClass().getName());
@@ -136,7 +157,7 @@ public class PishockZapConfig {
         if (configVersion < 2) {
             // Migrate from localEnabled to API type enum
             if (config.get("localEnabled") instanceof Boolean localEnabled) {
-                config.put("apiType", localEnabled ? PiShockApiType.SERIAL.name() : PiShockApiType.WEB_V1.name());
+                config.put("apiType", localEnabled ? ShockBackendType.SERIAL.name() : ShockBackendType.WEB_V1.name());
             }
         }
 
@@ -145,8 +166,27 @@ public class PishockZapConfig {
         return config;
     }
 
+    private static String fromSetterName(String setterName) {
+        if (setterName.length() < 4) return "";
+        var sb = new StringBuilder(setterName.length() - 3);
+        sb.append(Character.toLowerCase(setterName.charAt(3)));
+        sb.append(setterName, 4, setterName.length());
+        return sb.toString();
+    }
+
     public void setFromConfig(@NonNull Map<String, Object> config) {
         config = performConfigMigrations(config);
+
+        var setMethods = new HashMap<String, Method>();
+        for (Method method : getClass().getDeclaredMethods()) {
+            if (method.isSynthetic() || method.isBridge() || method.getParameterCount() != 1 || Modifier.isStatic(method.getModifiers()))
+                continue;
+
+            String name = fromSetterName(method.getName());
+            if (name.isEmpty()) continue;
+
+            setMethods.put(name, method);
+        }
 
         for (Field field : getClass().getDeclaredFields()) {
             int modifiers = field.getModifiers();
@@ -154,9 +194,15 @@ public class PishockZapConfig {
                 continue;
             }
 
-            Object value = config.get(field.getName());
+            String fieldName = field.getName();
+            Method setter = setMethods.get(fieldName);
+            if (setter == null) {
+                Logger.getLogger(PishockZapMod.NAME).warning("Missing setter for config field " + fieldName);
+                continue;
+            }
+            Object value = config.get(fieldName);
             if (value != null) {
-                setSingleConfigField(field, value);
+                setSingleConfigField(field, setter, value);
             }
         }
     }
